crates/compiler/test_syntax/tests/snapshots/pass/function_with_tuple_type.expr.formatted.roc
f : I64 -> (I64, I64)
f = |x| (x, x + 1)

f 42