crates/compiler/test_syntax/tests/snapshots/fail/type_double_comma.expr.roc
f : I64,,I64 -> I64
f = 0

f
